# rubik-cube-restore

./: .gitmodules  README.md  frameworks.md  index.html  package.json  todo  tsconfig.json  vite.config.ts
src/: App.tsx  App.vue  main.js  main.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/crates/rubik-cube-core/: Cargo.toml
src-tauri/crates/rubik-cube-core/src/: lib.rs
src-tauri/crates/rubik-cube-core/src/cube/: color.rs  face.rs  mod.rs
src-tauri/crates/rubik-cube-shuffler/: Cargo.toml
src-tauri/crates/rubik-cube-shuffler/src/: lib.rs  shuffler.rs
src-tauri/crates/rubik-cube-solver/: Cargo.toml
src-tauri/crates/rubik-cube-solver/src/: utils.rs
src-tauri/crates/rubik-cube-solver/src/solver/: mod.rs
src-tauri/crates/rubik-cube-solver/src/solver/layer_solvers/: bottom_corner.rs  bottom_cross.rs  middle_edge.rs  mod.rs  prelude.rs  top_corner.rs  top_cross.rs  top_edge.rs  top_face.rs  utils.rs
src-tauri/src/: lib.rs  lib_ext.rs  main.rs  rubiks.rs
src-tauri/src/rubiks/: mod.rs  shuffler.rs  utils.rs
src-tauri/src/rubiks/cube/: color.rs  face.rs  mod.rs
src-tauri/src/rubiks/solver/: layer_solvers.rs  mod.rs
src-tauri/src/rubiks/solver/layer_solvers/: bottom_corner.rs  bottom_cross.rs  middle_edge.rs  mod.rs  prelude.rs  top_corner.rs  top_cross.rs  top_edge.rs  top_face.rs  utils.rs
src-tauri/tests/: solver_tests.rs
src/components/: ApiMessageDisplay.vue  DraggableCube.tsx  DraggableCube.vue  GithubRubiksPage.vue  HelloWorld.vue  RubiksCube2D.tsx  RubiksCube2D.vue  RubiksCubeApp.vue  RubiksCubeBase.vue  RubiksCubeFace.vue  RubiksCubeFaceBlock.vue  RubiksCubeOnTauri.vue  RubiksCubeRotationControls.vue  RubiksCubeSingleBack.vue  RubiksCubeSingleBottom.vue  RubiksCubeSingleNormal.vue  RubiksCubeSingleRight.vue
src/components/github/: GithubRubiksPage.vue
src/router/: index.ts
src/services/: invoke-utils.ts
src/stores/: cube.ts
