[workspace]
members = [
  "crates/rubik-cube-core",
  "crates/rubik-cube-solver",
  ".",
  "crates/rubik-cube-shuffler",
]

[package]
authors = ["github/davelet"]
description = "A Tauri App for solving rubiks cube"
edition = "2021"
name = "rubik-cube-restore"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
crate-type = ["staticlib", "cdylib", "rlib"]
name = "rubik_cube_restore_lib"

[build-dependencies]
tauri-build = {version = "2", features = [] }

[dependencies]
chrono = "0.4"
rand = "0.8"
rubik-cube-core = {path = "crates/rubik-cube-core"}
rubik-cube-shuffler = {path = "crates/rubik-cube-shuffler"}
rubik-cube-solver = {path = "crates/rubik-cube-solver"}
serde = {version = "1", features = ["derive"] }
serde_json = "1"
tauri = {version = "2", features = [] }
tauri-plugin-opener = "2"
